# ClockingApp

./: .gitignore  README.md  app.py  check_clockings.py  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  setup.sh  tools.py  util.py
.github/workflows/: ci-actions.yml  release-installers.yml  tests.yml
clockingapp/: go.mod  go.sum  main.go  main_gui.go  main_nogui.go
clockingapp/.github/workflows/: tests.yml
clockingapp/cmd/cli/: root.go
clockingapp/internal/clockify/: client.go
clockingapp/internal/config/: config.go  config_test.go
clockingapp/internal/constants/: constants.go
clockingapp/internal/csv/: reader.go  validator.go  validator_test.go  writer.go
clockingapp/internal/jira/: client.go
clockingapp/internal/models/: clocking.go  task.go
clockingapp/internal/service/: clocking.go  clocking_test.go  report.go  summary.go
clockingapp/ui/: app.go  clocking_view.go  eod_window.go  main_window.go  settings_dialog.go  summary_window.go
models/: task_ui.py
services/: clockify_api.py  clocking_validator.py  config_manager.py  constants.py  csv_validator.py  database.py  exceptions.py  jira_api.py  utils.py
tests/: README.md  conftest.py  test_clocking_summary.py  test_clocking_validator.py  test_clocking_widget.py  test_config_manager.py  test_csv_validator.py  test_database.py  test_eod_report.py  test_settings_dialog.py  test_task_workflow.py
windows/: clocking.py  clocking_summary.py  eod_report.py  settings.py  task_editor.py  task_manager.py
