[project]
name = "clocking-app"
version = "0.1.3"
description = "A desktop application to register clockings into a SQLite file database"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "python-dotenv~=1.0.1",
    "jira>=3.10.5",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[tool.ruff]
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"
